src/test/deca/syntax/invalid/print-invalid-token.synt
print-invalid-token.deca:12: